030-software/fluxcd/apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  annotations:
    secret.reloader.stakater.com/reload: radarr
    configmap.reloader.stakater.com/reload: config
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        policy.gatekeeper.sh/ignore-container-must-have-limits: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        fsGroupChangePolicy: OnRootMismatch
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: radarr
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: radarr
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.4.4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          resources:
            limits:
              memory: 4096Mi
            requests:
              memory: 256Mi
              cpu: 100m
          volumeMounts:
            - name: tmp
              mountPath: /config
            - name: movies
              mountPath: /mnt/movies
            - name: downloads
              mountPath: /mnt/downloads
      volumes:
        - name: tmp
          emptyDir: {}
        - name: movies
          nfs:
            server: genji.home.arpa
            path: /movies
        - name: downloads
          nfs:
            server: 10.102.22.211
            path: /
