030-software/fluxcd/apps/radarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  annotations:
    dashboard.${domain}/icon:  theater
    dashboard.${domain}/name: radarr
    dashboard.${domain}/url: https://radarr.${domain}
spec:
  hostnames:
  - radarr.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: radarr
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
